Merge branch 'mow-1698' into 'main'
MOW-1698 Center curves on paste

See merge request ggb/geogebra!9444

GitOrigin-RevId: a8db84ba05581d7676a84ca2a98d4c357f195629